<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enviar feedback</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="instrucciones_feedback">Introducir feedback a enviar:</string>
    <string name="quieres_respuesta">¿Te gustaría recibir una respuesta por e-mail?</string>
    <string name="enviar">Enviar Feedback</string>
     <string name="hint_nombre">Tu nombre</string>
    <string name="hint_email">Tu email</string>
    <string name="hint_detalles_feedback">Detalles de feedback</string>
    <string name="prompt_spinner">Introducir tipo de feedback</string>

</resources>